--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -1,7 +1,11 @@
+
+
+
 main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 1500px;
 
 }
 
@@ -36,8 +40,9 @@ body {
 
 .div4 {
     border: 2px solid rgb(3, 92, 18);
-    height: auto;
-    display: flex;
+    height: 500px;
+/*     height: auto;
+    display: flex; */
 }
 .div5 {
     border: 2px solid rgb(3, 92, 18);
@@ -287,33 +292,6 @@ ul.table_ul05 li:first-child {
 /* 이미지리스트 출력 */
 
 
-.box_photo {
-    max-width: 100%;
-    min-width: 150px;
-    height: auto;
-    width: auto;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.box_photo3 {
-
-    background-color: rgb(240, 240, 240);
-    width: 226px;
-    height: 220px;
-    margin: 0px;
-    padding: 3px;
-    left: 4px;
-    top: 0px;
-    pointer-events: auto;
-   
-}
-/* 이미지 사이즈 */
-/* .lazy{
-    width: 226px;
-    height: 220px;
-} */
-
 
 
 
@@ -344,46 +322,48 @@ ul.table_ul05 li:first-child {
 
 
 
+/* ----------- 이미지 슬라이더 ---------  */
+.post-slider{
+    border:1px solid red;
+    height: 450px;
+  }
+  .post-slider .post-wrapper{
+    width:95%;
+    height:400px;
+    margin:0px auto;
+    border:1px dashed red;
+  }
+  .post-slider .post-wrapper .post{
+    width:350px;
+    height:350px;
+    display:inline-block;
+    background:gray;
+    margin: 10px;
+    border-radius: 5%;
 
-/* .camp_tab05 li a {
-    display: block;
-    padding: 10px;
-    background-color: #f2f2f2;
-    color: #000;
-    text-decoration: none;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-    position: relative;
-} */
+  }
 
-/* .camp_tab05 li a:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
+ .div4 img {
+    border-radius: 5%;
     width: 100%;
     height: 100%;
-    background-color: transparent;
-    border-radius: 4px;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s ease;
-} */
+  }
 
-/* .camp_tab05 li a:hover:before {
-    opacity: 1;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.camp_tab05 li.active a {
-    background-color: #333;
-    color: #fff;
-}
-
-.camp_tab05 li.active a:before {
-    opacity: 1;
-    background-color: rgba(255, 255, 255, 0.1);
-} */
+     
 
 
+  .slick-prev:before, .slick-next:before{
+    color: green !important;
+    opacity: 1 ; 
+    font-size: 70px !important;
+  }
+  /* 화살표 위치 변경 */
+  .slick-prev{
+    z-index: 9 ;
+  }
+  .slick-next{
+ 
+    right: 20px !important ;
+    z-index: 9 ;  
+  }
 
