메인css 일부 추가, 헤더 css 수정

--- a/camp/src/main/webapp/resources/css/main-style.css
+++ b/camp/src/main/webapp/resources/css/main-style.css
@@ -3228,8 +3228,8 @@ textarea.form-input {
 
 .form-label {
 	position: absolute;
-	top: 30px;
-	left: 0;
+	top: 20px;
+	left: 13px;
 	right: 0;
 	padding-left: 25px;
 	padding-right: 25px;
