--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -11,6 +11,8 @@ body {
 
 #header {
     display: flex;
+    justify-content: space-between;
+    width: 100%;
     height: 100px;
     transition: all 0.5s;
     transition: all 0.5s;
@@ -18,7 +20,7 @@ body {
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
-.container {
+.header-container {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -177,9 +179,16 @@ main {
     width: 100%;
     height: 1000px;
     border: 1px solid black;
-    
 }
 
+.backdrop {
+  z-index: 10000;
+  width: 100%;
+  height: 1000px;
+  background-color: rgba(0,0,0,0.3);
+  /* box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3); */
+  backdrop-filter: blur(5px);
+}
 
 
 
