--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -104,8 +104,9 @@ body {
 }
 
 .div5 {
-    border: 2px solid rgb(3, 92, 18);
-    margin-top: 60px;
+    border: 1px solid rgb(210, 210, 210);
+    background-color: white;
+    border-bottom: 0px;
     height: 60px;
     display: flex;
     text-align: center;
@@ -118,10 +119,14 @@ body {
 }
 
 .div6 {
-    border: 2px solid rgb(3, 92, 18);
+    border: 1px solid rgb(210, 210, 210);
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     height: 300px;
     display: flex;
     width: 1600px;
+    padding: 20px;
 }
 
 .div7 {
@@ -462,7 +467,6 @@ ul.table_ul05 li:first-child {
 
 /* ----------- 이미지 슬라이더 ---------  */
 .post-slider {
-    border: 1px solid rgb(210, 210, 210);
     border-top: 0px;
     border-bottom: 0px;
     height: 450px;
