메인 검색창, 메인 이미지 CSS 수정

--- a/camp/src/main/webapp/resources/css/bootstrap_main_header.css
+++ b/camp/src/main/webapp/resources/css/bootstrap_main_header.css
@@ -439,7 +439,7 @@ th {
 label {
   display: inline-block;
 }
-
+/* 
 button {
   border-radius: 0;
 }
@@ -491,7 +491,7 @@ button:not(:disabled),
 [type=submit]:not(:disabled) {
   cursor: pointer;
 }
-
+ */
 ::-moz-focus-inner {
   padding: 0;
   border-style: none;
@@ -2966,7 +2966,7 @@ textarea.form-control-lg {
 .input-group > .form-floating:not(:focus-within).is-invalid {
   z-index: 4;
 }
-
+/* 
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
@@ -3352,7 +3352,7 @@ textarea.form-control-lg {
   --bs-btn-font-size: 0.875rem;
   --bs-btn-border-radius: var(--bs-border-radius-sm);
 }
-
+ */
 .fade {
   transition: opacity 0.15s linear;
 }
