--- a/camp/src/main/webapp/resources/css/main-bootstrap.css
+++ b/camp/src/main/webapp/resources/css/main-bootstrap.css
@@ -344,10 +344,10 @@ button {
 	border-radius: 0;
 }
 
-button:focus {
+/* button:focus {
 	outline: 1px dotted;
 	outline: 5px auto -webkit-focus-ring-color;
-}
+} */
 
 input,
 button,
@@ -2239,7 +2239,7 @@ textarea.form-control {
 		margin-bottom: 0;
 	}
 }
-
+/* 
 .btn {
 	display: inline-block;
 	font-weight: 600;
@@ -2329,7 +2329,7 @@ fieldset:disabled a.btn {
 .btn-block + .btn-block {
 	margin-top: 0.5rem;
 }
-
+ */
 input[type="submit"].btn-block,
 input[type="reset"].btn-block,
 input[type="button"].btn-block {
