--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -158,6 +158,9 @@ a:hover {
 
 
 
+/* #myPage {
+  cursor: pointer;
+} */
 
 #campList{
     cursor: pointer;
@@ -174,7 +177,7 @@ main {
 }
 
 .content2{
-    background-image: url('../images/test1.jpg');
+    background-image: url('../images/main4.gif');
     background-size: 100% 100%;
     width: 100%;
     height: 1000px;
@@ -184,10 +187,10 @@ main {
 .backdrop {
   z-index: 10000;
   width: 100%;
-  height: 1000px;
-  background-color: rgba(255,255,255,0.3);
+  height: 998px;
+  background-color: rgba(255,255,255, 0.1);
   /* box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3); */
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
 }
 
 
@@ -339,6 +342,12 @@ footer span {
     width: 33%;
 }
 
+.slide3{ 
+  width: 1400px;
+
+}
+
+
 
 .slider__btn a {
     position: absolute;
@@ -403,6 +412,7 @@ footer span {
     height: 40px;
     border-radius: 4px;
     transition: all 0.4s;
+    
   }
   
   .back-to-top i {
@@ -419,6 +429,7 @@ footer span {
   .back-to-top.active {
     visibility: visible;
     opacity: 1;
+    
   }
 
   .back-to-top{
