--- a/camp/src/main/webapp/resources/css/calendarStyle.css
+++ b/camp/src/main/webapp/resources/css/calendarStyle.css
@@ -12,31 +12,31 @@ body{
     /* display: flex; */
     align-items: center;
     /* justify-content: center; */
-    background-color: #e2e1dc;
+   
 
 }
 
-.container{
+.containerCal{
     position: relative;
-    width: 1000px;
-    height: 450px;
-    margin: 0 auto;
-    padding: 0;
+    width: 450px;
+    height: 98%;
+    box-shadow: 5px 5px 5px 5px lightgrey;
+    padding: 10px;
     color: #fff;
     display: flex;
     border-radius: 10px;
     background-color: #4fa93f;
 }
-.left{
+/* .left{
     width: 40%;
     padding: 20px;
 
-}
+} */
 
 .calendar{
-    position: relative;
-    width: 90%;
-    height:95%;
+    /* position: relative; */
+    width: 98%;
+    height:98%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -44,19 +44,10 @@ body{
     color: #878895;
     border-radius: 5px;
     background-color: #fff;
+    margin: 5px;
+    padding: 0;
 }
-.calendar::before,
-.calendar::after{
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 100%;
-    width: 12px;
-    height: 97%;
-    border-radius: 0 5px 5px 0;
-    background-color: #d3d5d6d7;
-    transform: translateY(-50%);
-}
+
 .calendar::before{
     height: 94%;
     left: calc(100% + 12px);
@@ -101,7 +92,7 @@ body{
 }
 .calendar .days{
     width: 100%;
-    height: 200px;
+    height: 250px;
     display: flex;
     flex-wrap: wrap;
     /* justify-content: space-between; */
@@ -112,18 +103,20 @@ body{
 }
 .calendar .days .day{
     width: 14.28%;
-    height: 40px;
+    height: 50px;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
     cursor: pointer;
     color: var(--primary-clr);
     border: 1px solid #f5f5f5;
-    font-size: 10px;
+    font-size: 15px;
 }
+
 .calendar .day:not(.prev-date , .next-date):hover{
     color: #fff;
     background-color: var(--primary-clr);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 
 }
 .calendar .days .prev-date,
@@ -134,7 +127,7 @@ body{
 .calendar .days .active{
     position: relative;
     
-    font-size: 10px;
+    font-size: 20px;
     color: #fff;
     background-color: var(--primary-clr);
 }
@@ -148,9 +141,9 @@ body{
     box-shadow: 1px 1px 1px 1px var(--primary-clr);
 } */
 .calendar .days .today {
-    font-size: 15px;
+    font-size: 30px;
     font-weight: bold;
-    
+   
 }
 .calendar .days .event{
     position: relative;
@@ -189,6 +182,7 @@ body{
 }
 .calendar .goto-today .goto{
     display: flex;
+    width: 250px;
     align-items: center;
     border-radius: 5px;
     overflow: hidden;
@@ -196,13 +190,14 @@ body{
 }
 .calendar .goto-today .goto input{
     width: 100%;
-    height: 15px;
+    height: 20px;
     outline: none;
     border: none;
     border-radius: 5px;
     padding: 0 20px;
     color: var(--primary-clr);
     border-radius: 5px;
+    font-size: 15px;
 
 }
 .calendar .goto-today button{
@@ -222,12 +217,12 @@ body{
     border-left: 1px solid var(--primary-clr);
     border-radius: 0;
 }
-.container .right{
+/* .container .right{
     position: relative;
     width: 40%;
     min-height: 100%;
     padding: 20px 0;
-}
+} */
 .right .today-date{
     width: 100%;
     height: 50px;
@@ -474,6 +469,7 @@ body{
     width: 100px;
     padding: 5px;
     margin-left: 20px;
+    margin-bottom: 10px;
     border-radius: 5px;
     border: 1px solid var(--primary-clr);
     background-color: #fff;
@@ -486,37 +482,66 @@ body{
     background-color: var(--primary-clr);
     color: #fff;
 }
-.checkIn{
+.check{
     display: flex;
-    justify-content: space-between;
-    height: 50px;
-    padding-right: 50px;
+    /* justify-content: space-between; */
+    height: 40px;
+    width: 390px;
+    margin: 15px;
+    font-weight: 100;
+    align-items: center;
+    justify-content: center;
+
+    
+    
 }
-.checkOut{
-    display: flex;
-    justify-content: space-between;
-    height: 50px;
-    padding-right: 50px;
-}
+
 .TOTAL{
     display: flex;
     justify-content: space-between;
     height: 50px;
-    padding-right: 50px;
+    padding: 0 80px 0 80px;
+    
 }
-.first-day,
-.last-day,
+.total{
+    margin-left: 30px;
+}
+
 .total-days{
     width: 100px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    font-weight: 100;
+    
 }
-
+.first-day{
+    width: 100px;
+    height: 50px;;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 10px 0 20px 50px;
+   
+}
+.last-day{
+    width: 100px;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 10px 50px 20px 0;
+    
+}
 .daybetween{
     width: 100px;
 }
+.event-day{
+    
+    width: 120px;
+    height: 35px;
+   
+    
+    
+}
 
-
+/* 
 @media (max-width : 1000px){
     body{
         align-items: flex-start;
@@ -573,4 +598,4 @@ body{
         padding: 20px;
         
     }
-}
+} */
