--- a/camp/src/main/webapp/resources/css/bootstrap_main_header.css
+++ b/camp/src/main/webapp/resources/css/bootstrap_main_header.css
@@ -413,7 +413,7 @@ svg {
   border-collapse: collapse;
 } */
 
-caption {
+/* caption {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   color: var(--bs-secondary-color);
@@ -423,7 +423,7 @@ caption {
 th {
   text-align: inherit;
   text-align: -webkit-match-parent;
-}
+} */
 /* 
 thead,
 tbody,
@@ -1853,6 +1853,7 @@ progress {
     --bs-gutter-y: 3rem;
   }
 }
+
 .table {
   --bs-table-color-type: initial;
   --bs-table-bg-type: initial;
@@ -1873,19 +1874,19 @@ progress {
   vertical-align: top;
   border-color: var(--bs-table-border-color);
 }
-.table > :not(caption) > * > * {
+/* .table > :not(caption) > * > * {
   padding: 0.5rem 0.5rem;
   color: var(--bs-table-color-state, var(--bs-table-color-type, var(--bs-table-color)));
   background-color: var(--bs-table-bg);
   border-bottom-width: var(--bs-border-width);
   box-shadow: inset 0 0 0 9999px var(--bs-table-bg-state, var(--bs-table-bg-type, var(--bs-table-accent-bg)));
-}
-.table > tbody {
+} */
+/* .table > tbody {
   vertical-align: inherit;
-}
-.table > thead {
+} */
+/* .table > thead {
   vertical-align: bottom;
-}
+} */
 
 .table-group-divider {
   border-top: calc(var(--bs-border-width) * 2) solid currentcolor;
@@ -7373,10 +7374,10 @@ textarea.form-control-lg {
   display: table-row !important;
 }
 
-.d-table-cell {
+/* .d-table-cell {
   display: table-cell !important;
 }
-
+ */
 /* .d-flex {
   display: flex !important;
 } */
@@ -9266,9 +9267,9 @@ textarea.form-control-lg {
   .d-sm-table-row {
     display: table-row !important;
   }
-  .d-sm-table-cell {
+/*   .d-sm-table-cell {
     display: table-cell !important;
-  }
+  } */
   .d-sm-flex {
     display: flex !important;
   }
@@ -9827,9 +9828,9 @@ textarea.form-control-lg {
   .d-md-table-row {
     display: table-row !important;
   }
-  .d-md-table-cell {
+/*   .d-md-table-cell {
     display: table-cell !important;
-  }
+  } */
   .d-md-flex {
     display: flex !important;
   }
@@ -10388,9 +10389,9 @@ textarea.form-control-lg {
   .d-lg-table-row {
     display: table-row !important;
   }
-  .d-lg-table-cell {
+/*   .d-lg-table-cell {
     display: table-cell !important;
-  }
+  } */
   .d-lg-flex {
     display: flex !important;
   }
@@ -10949,9 +10950,9 @@ textarea.form-control-lg {
   .d-xl-table-row {
     display: table-row !important;
   }
-  .d-xl-table-cell {
+/*   .d-xl-table-cell {
     display: table-cell !important;
-  }
+  } */
   .d-xl-flex {
     display: flex !important;
   }
@@ -11510,9 +11511,9 @@ textarea.form-control-lg {
   .d-xxl-table-row {
     display: table-row !important;
   }
-  .d-xxl-table-cell {
+/*   .d-xxl-table-cell {
     display: table-cell !important;
-  }
+  } */
   .d-xxl-flex {
     display: flex !important;
   }
@@ -12056,9 +12057,9 @@ textarea.form-control-lg {
   .d-print-table-row {
     display: table-row !important;
   }
-  .d-print-table-cell {
+/*   .d-print-table-cell {
     display: table-cell !important;
-  }
+  } */
   .d-print-flex {
     display: flex !important;
   }
