--- a/camp/src/main/webapp/resources/css/campList.css
+++ b/camp/src/main/webapp/resources/css/campList.css
@@ -61,7 +61,7 @@ hr {
     align-items: center;
     height: 600px;
     border: 1px solid black;
-    background-image: url('../images/test1.jpg'); 
+    background-image: url('../images/main4.gif'); 
     background-size: 100% 100%; 
 }
 
