--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -54,9 +54,9 @@ body {
 #detailMain {
     width: 100%;
     height: 300px;
-    border: 1px solid green;
-    background-image: url('../images/test1.jpg');
-    background-size: 100% auto;
+    border: 1px solid orange;
+    background-image: url('../images/main4.gif');
+    background-size: 100% 100%;
 }
 
 
@@ -87,7 +87,7 @@ body {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     
-    height: auto;
+    height: 530px;
     margin-top: 0px;
     width: 1600px;
 }
@@ -116,6 +116,7 @@ body {
     font-size: 25px;
     font-weight: bold;
     width: 1600px;
+    color: #616161;
 }
 
 .div6 {
@@ -127,12 +128,17 @@ body {
     display: flex;
     width: 1600px;
     padding: 20px;
+    letter-spacing: 0.1mm;
+    line-height: 8mm;
+    color: #333;
 }
 
 .div7 {
-    border: 2px solid rgb(3, 92, 18);
-    margin-top: 60px;
-    min-height: 200px;
+    border: 1px solid rgb(210, 210, 210);
+    background-color: white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 100px;
     display: flex;
     text-align: center;
     justify-content: center;
@@ -141,6 +147,7 @@ body {
     font-size: 25px;
     font-weight: bold;
     width: 1600px;
+    color: #616161;
 }
 
 .div4_1 {
@@ -156,10 +163,20 @@ body {
     font-weight: bold;
     width: 1600px;
     background-color: white;
+    color: #616161;
 }
 
+.div8{
+    width: 1600px;
+    height: auto;
+    border: 1px solid #dedede;
+    background-color: white;
+    border-radius: 10px;
+}
+
+
 .kakaoMap {
-    margin-top: 60px;
+   
     height: 600px;
     width: 1600px;
 }
@@ -216,7 +233,7 @@ body {
 }
 
 .camp_info_box .cont_tb tbody tr:nth-child(1) td {
-    border-top: 2px solid green;
+    border-top: 2px solid orange;
 }
 
 
@@ -235,48 +252,60 @@ body {
 }
 
 
-.reservationButton {
-
-    margin-top: 10px;
+#reservationBtn {
+    border: 1px solid #c8c8c8;
+    width: 400px;
+    margin-top: 80px;
+    height: 80px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+    background-color: rgb(249, 190, 81);
+    transition: background-color 0.2s ease;
+    font-size: 30px;
+    letter-spacing: 2.0mm;
 }
+#reservationBtn:hover{
+    background-color: orange;
+}
+#reservationBtn > a {
+    color: rgb(48, 48, 48);
+}
+
+
 
 /***********************************************************************************************************************************************************************/
 /* 테이블디자인************************************************************************************************************************************************************/
+
+.camp_info_tb{
+    border-right-style:none ;
+}
 
 .table_t4 caption {
     font-size: 25px;
     font-weight: bold;
     text-align: center;
-    padding: 20px
-}
-
-.table_w {
-    position: relative;
-    width: 1600px;
-    margin-top: 0px;
-    margin-bottom: 20px;
+    padding: 20px;
+    color: #616161;
 }
 
 .table_w .table {
     position: relative;
     width: 100%;
     letter-spacing: 0px;
-    border-left: 1px solid #b3b3b3;
-    border-top: 2px solid #000000;
 }
 
 .table_w .table th {
-    padding: 15px 10px;
+    padding: 20px;
     line-height: 18px;
     font-weight: bold;
     font-size: 14px;
     color: #333;
+   
     border-bottom: 1px solid #b3b3b3;
     border-right: 1px solid #b3b3b3;
     background-color: #f9f9fe;
     word-break: break-all;
 }
-
 .table_w .table td {
     padding: 15px 15px;
     line-height: 18px;
@@ -286,7 +315,69 @@ body {
     border-bottom: 1px solid #b3b3b3;
     border-right: 1px solid #b3b3b3;
     word-break: break-all;
+    
 }
+
+
+.table_w2 {
+    position: relative;
+    width: 1600px;
+    margin-top: 0px;
+    
+    height: 300px;
+    background-color: white;
+    border: 1px solid #dedede;
+    border-top: 1px solid #b3b3b3;
+    text-align: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+
+.table_w2 .table {
+    position: relative;
+    width: 100%;
+    letter-spacing: 0px;
+}
+
+.table_w2 .table th {
+    padding: 20px;
+    font-weight: bold;
+    font-size: 17px;
+    color: #333;
+    border-bottom: 1px solid #b3b3b3;
+    border-right: 1px solid #b3b3b3;
+    background-color: #f9f9fe;
+    justify-content: center;
+    align-items: center;
+    
+}
+#last1{
+    border-right:0px;
+}
+#last2{
+    border-right:0px;
+}
+#last3{
+    border-right:0px;
+}
+#last4{
+    border-bottom:0px;
+}
+
+.table_w2 .table td {
+    padding: 15px 15px;
+    line-height: 18px;
+    font-weight: normal;
+    font-size: 20px;
+    color: #777;
+    border-bottom: 1px solid #b3b3b3;
+    border-right: 1px solid #b3b3b3;
+    word-break: break-all;
+}
+
+
+
 
 
 ul.table_ul05 {
@@ -328,7 +419,7 @@ ul.table_ul05 li:first-child {
 }
 
 .table_t4 tbody tr:nth-child(1) td {
-    border-top: 2px solid green;
+    border-top: 2px solid orange;
 }
 
 
@@ -361,9 +452,6 @@ ul.table_ul05 li:first-child {
     text-align: left;
 }
 
-.table_w .table_t4 tr:last-child td {
-    border-bottom: 0;
-}
 
 
 
@@ -386,9 +474,10 @@ ul.table_ul05 li:first-child {
 
     display: flex;
     justify-content: center;
-    padding-left: 150px;
-    padding-right: 150px;
-    margin: 22px;
+/*     padding-left: 150px;
+    padding-right: 150px; */
+    margin: 23px;
+    padding: 0px;
 }
 
 .camp_tab05 li {
@@ -407,19 +496,17 @@ ul.table_ul05 li:first-child {
 }
 
 
-/* .camp_cont_w ul.camp_tab05 {
-    width: 100%;
-    height: 53px;
-    display: flex;
-    margin-bottom: 0px;
-} */
+
 
 .camp_cont_w ul.camp_tab05 li {
     float: left;
-    width: 20%;
+    width: 13%;
     height: 53px;
    /*  background: #8d8d8d; */
     text-align: center;
+    margin: 0px;
+
+
 }
 
 .camp_cont_w ul.camp_tab05 li a {
@@ -462,6 +549,38 @@ ul.table_ul05 li:first-child {
 
 
 
+.table_w3{
+
+width: 1600px;
+height: auto;
+border: 1px solid rgb(210, 210, 210);
+border-bottom-left-radius: 10px;
+border-bottom-right-radius: 10px;
+}
+
+.table_w3 > .table {
+    margin-bottom: 0px;
+    height: 400px;
+    text-align: center;
+}
+.table_w3 > .table > thead {
+    height: 50px;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -478,7 +597,6 @@ ul.table_ul05 li:first-child {
     width: 88%;
     height: 400px;
     margin: 0px auto;
-    border: 1px dashed red;
 }
 
 .post-slider .post-wrapper .post {
@@ -499,21 +617,35 @@ ul.table_ul05 li:first-child {
 
 
 
+.slick-prev:before {
+    margin-left: -45px;
+}
+
+
 
 .slick-prev:before,
 .slick-next:before {
-    color: green !important;
-    opacity: 1;
+    color: orange !important;
+    opacity: 0.75;
     font-size: 70px !important;
 }
 
-/* 화살표 위치 변경 */
-.slick-prev {
-    z-index: 9;
+.slick-prev:hover:before,
+.slick-next:hover:before {
+    color: rgb(238, 190, 102) !important;
+    opacity: 0.75;
 }
 
+
+
+/* 화살표 위치 변경 */
+.slick-prev {
+    right: 0 !important;
+    z-index: 9;
+
+}
 .slick-next {
 
-    right: 20px !important;
+  /*   right: 20px !important; */
     z-index: 9;
 }
