--- a/camp/src/main/webapp/resources/css/campList.css
+++ b/camp/src/main/webapp/resources/css/campList.css
@@ -74,7 +74,7 @@ hr {
 /* 검색 레이어박스 스타일 */
 .search_box_form {
     /* background-color: #4caf50; */
-    background-color: rgba(39, 168, 39, 0.724);
+    background-color: #00000061;
     padding: 40px;
     border-radius: 5px;
     width: 800px;
@@ -82,6 +82,7 @@ hr {
     display: grid;
     justify-content: center;
     align-content: space-around;
+    margin-top: 100px;
   }
   .search_box_form > div {
     font-size: 20px;
@@ -155,7 +156,7 @@ hr {
 /*   display: inline-block; */
   margin-right: 50px;
   padding: 8px 16px;
-  background-color: green;
+  background-color: orange;
   color: #fff;
   font-weight: bold;
   text-decoration: none;
@@ -166,7 +167,7 @@ hr {
 }
 
 .reservation_button:hover {
-  background-color: rgb(1, 82, 1);
+  background-color: rgb(249, 190, 81);
 }
 
 
