--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -54,7 +54,6 @@ body {
 #detailMain {
     width: 100%;
     height: 300px;
-    border: 1px solid orange;
     background-image: url('../images/main4.gif');
     background-size: 100% 100%;
 }
@@ -121,7 +120,7 @@ body {
 
 .div6 {
     border: 1px solid rgb(210, 210, 210);
-    background-color: white;
+    background-color: rgba(255, 255, 255);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     height: 300px;
@@ -131,6 +130,7 @@ body {
     letter-spacing: 0.1mm;
     line-height: 8mm;
     color: #333;
+    opacity: 0.75;
 }
 
 .div7 {
@@ -259,16 +259,17 @@ body {
     height: 80px;
     margin-bottom: 50px;
     border-radius: 10px;
-    background-color: rgb(249, 190, 81);
+    background-color: rgb(54 52 49);
     transition: background-color 0.2s ease;
     font-size: 30px;
     letter-spacing: 2.0mm;
 }
 #reservationBtn:hover{
     background-color: orange;
+
 }
 #reservationBtn > a {
-    color: rgb(48, 48, 48);
+    color: white;
 }
 
 
@@ -324,7 +325,7 @@ body {
     width: 1600px;
     margin-top: 0px;
     
-    height: 300px;
+    height: 350px;
     background-color: white;
     border: 1px solid #dedede;
     border-top: 1px solid #b3b3b3;
@@ -531,11 +532,11 @@ ul.table_ul05 li:first-child {
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 
-    background-color: #6f6f6f;
+    background-color: rgb(249, 190, 81);
     transition: background-color 0.3s ease;
 }
 .campListli:hover{
-    background-color: #b1afaf;
+    background-color: orange;
 }
 
 
@@ -568,6 +569,12 @@ border-bottom-right-radius: 10px;
     
 }
 
+.date{
+    background-color: rgb(255 165 0 / 14%) !important;
+}
+.date2{
+    background-color: rgb(255 165 0 / 14%) !important;
+}
 
 
 
