--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -195,6 +195,7 @@ main {
 
 
 
+
 /* -------------- ajax Table  --------------      */
 .cont_tb1 {
     position: relative;
@@ -214,7 +215,7 @@ main {
 }
 
 .cont_tb1 tbody tr:nth-child(1) td {
-    border-top: 2px solid green;
+    border-top: 2px solid orange;
 }
 
 .cont_tb1 table tr th {
@@ -274,6 +275,15 @@ footer span {
 
 
 
+#introduce{
+  width: 100%;
+  height: 100px;
+  border: 1px solid red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #eee;
+}
 
 
 #divv{
@@ -281,6 +291,7 @@ footer span {
     height: 800px;
     display: flex;
     position: relative;
+    background-color: #eee;
 }
 
 
@@ -292,11 +303,12 @@ footer span {
     height: 35%;
 }
 .ranBoard_1{
-    border: 1px solid green;
+   /*  border: 1px solid green; */
 }
 .ranBoard_1 > a > img {
     width: 100%;
     height: 100%;
+    border-radius: 20px;
 }
 
 
@@ -340,6 +352,8 @@ footer span {
     top: 5px;
     padding: 5px 10px;
     width: 33%;
+    padding: 30px;
+    border-radius: 20px;
 }
 
 .slide3{ 
@@ -369,11 +383,11 @@ footer span {
 }
 .slider__btn a.prev {
     font-size: 20px;
-    left: 190px;
+    left: 90px;
 }
 .slider__btn a.next {
     font-size: 20px;
-    right: 200px;
+    right: 100px;
 }
 
 
