--- a/camp/src/main/webapp/resources/css/main-style.css
+++ b/camp/src/main/webapp/resources/css/main-style.css
@@ -3854,6 +3854,7 @@ textarea.form-input {
 		margin-left: auto;
 		margin-right: auto;
 		padding: 66px 40px;
+		border-radius: 40px;
 	}
 	.booking-form {
 		margin-left: -30px;
