--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 20px;
-    margin-top: 115px;
+   
 
 }
 
@@ -23,7 +23,7 @@ body {
     color: #fff;
     padding: 30px;
     margin-left: 70px;
-    margin-top: 50px;
+    margin-top: 140px;
     text-shadow: 2px 2px 3px rgb(0, 0, 0);
 }
 
@@ -53,8 +53,7 @@ body {
 
 #detailMain {
     width: 100%;
-    height: 300px;
-    border: 1px solid orange;
+    height: 420px;
     background-image: url('../images/main4.gif');
     background-size: 100% 100%;
 }
@@ -74,7 +73,7 @@ body {
     border: 1px solid rgb(210, 210, 210);
     background-color: white;
     border-radius: 10px;
-    margin-top: 50px;
+    margin-top: 80px;
     height: 550px;
     display: flex;
     width: 1600px;
@@ -87,7 +86,7 @@ body {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     
-    height: 530px;
+    height: 520px;
     margin-top: 0px;
     width: 1600px;
 }
@@ -109,10 +108,10 @@ body {
     border-bottom: 0px;
     height: 60px;
     display: flex;
-    text-align: center;
-    justify-content: center;
+    text-align: left;
+    /* justify-content: center; */
     align-items: center;
-    padding: auto;
+    padding: 20px;
     font-size: 25px;
     font-weight: bold;
     width: 1600px;
@@ -121,7 +120,7 @@ body {
 
 .div6 {
     border: 1px solid rgb(210, 210, 210);
-    background-color: white;
+    background-color: rgba(255, 255, 255);
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     height: 300px;
@@ -129,8 +128,9 @@ body {
     width: 1600px;
     padding: 20px;
     letter-spacing: 0.1mm;
-    line-height: 8mm;
+    line-height: 9mm;
     color: #333;
+    opacity: 0.75;
 }
 
 .div7 {
@@ -155,10 +155,10 @@ body {
     border-top: 0px;
     height: 60px;
     display: flex;
-    text-align: center;
-    justify-content: center;
+    text-align: left;
+    /* justify-content: center; */
     align-items: center;
-    padding: auto;
+    padding: 20px;
     font-size: 25px;
     font-weight: bold;
     width: 1600px;
@@ -254,21 +254,22 @@ body {
 
 #reservationBtn {
     border: 1px solid #c8c8c8;
-    width: 400px;
+    width: 280px;
     margin-top: 80px;
-    height: 80px;
+    height: 65px;
     margin-bottom: 50px;
     border-radius: 10px;
-    background-color: rgb(249, 190, 81);
+    background-color: rgb(54 52 49);
     transition: background-color 0.2s ease;
     font-size: 30px;
     letter-spacing: 2.0mm;
 }
 #reservationBtn:hover{
     background-color: orange;
+
 }
 #reservationBtn > a {
-    color: rgb(48, 48, 48);
+    color: white;
 }
 
 
@@ -283,7 +284,7 @@ body {
 .table_t4 caption {
     font-size: 25px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     padding: 20px;
     color: #616161;
 }
@@ -324,7 +325,7 @@ body {
     width: 1600px;
     margin-top: 0px;
     
-    height: 300px;
+    height: 350px;
     background-color: white;
     border: 1px solid #dedede;
     border-top: 1px solid #b3b3b3;
@@ -531,11 +532,11 @@ ul.table_ul05 li:first-child {
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 
-    background-color: #6f6f6f;
+    background-color: rgb(249, 190, 81);
     transition: background-color 0.3s ease;
 }
 .campListli:hover{
-    background-color: #b1afaf;
+    background-color: orange;
 }
 
 
@@ -568,6 +569,12 @@ border-bottom-right-radius: 10px;
     
 }
 
+.date{
+    background-color: rgb(255 165 0 / 14%) !important;
+}
+.date2{
+    background-color: rgb(255 165 0 / 14%) !important;
+}
 
 
 
