--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -5,8 +5,17 @@
 body {
     height: auto;
     margin: 0;
+    margin-top: 90px;
 /*     background-image: url('../images/test1.jpg'); 
      background-size: 100% 100%;  */
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+transition: background-color 5000s;
+-webkit-text-fill-color: #000 !important;
 }
 
 #header {
@@ -193,7 +202,7 @@ main {
   z-index: 10000;
   width: 100%;
   height: 998px;
-  background-color: rgba(255,255,255, 0.1);
+  /* background-color: rgba(255,255,255, 0.1); */
   /* box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3); */
   backdrop-filter: blur(10px);
 }
@@ -201,9 +210,12 @@ main {
 
 .section-title {
   display: flex;
+  background-color: #eee;
+  height: 200px;
+  align-items: flex-end;
   justify-content: center;
-  align-items: center;
 }
+
 
 
 /* -------------- ajax Table  --------------      */
@@ -225,7 +237,7 @@ main {
 }
 
 .cont_tb1 tbody tr:nth-child(1) td {
-    border-top: 2px solid green;
+    border-top: 2px solid orange;
 }
 
 .cont_tb1 table tr th {
@@ -243,47 +255,138 @@ main {
 }
 
 
-
-
-
-/* footer */
-
-footer {
-    height: 200px;
-}
-
-/* footer 스타일 */
-footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-footer>p {
-    font-weight: bold;
-}
-
-footer>article>* {
-    font-size: 14px;
-}
-
-footer a {
-    color: black;
-    text-decoration: none;
-}
-
-footer span {
-    padding: 0 10px;
-}
-
-.searchOption {
-    display: none;
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+#footer {
+  background: #fff;
+  padding: 0 0 30px 0;
+  color: #212529;
+  font-size: 14px;
+  background: #fef8f5;
 }
 
 
+#footer .footer-top {
+  padding: 60px 0 30px 0;
+  background: #fff;
+}
 
+#footer .footer-top .footer-contact {
+  margin-bottom: 30px;
+}
 
+#footer .footer-top .footer-contact h4 {
+  font-size: 22px;
+  margin: 0 0 30px 0;
+  padding: 2px 0 2px 0;
+  line-height: 1;
+  font-weight: 700;
+}
+
+#footer .footer-top .footer-contact p {
+  font-size: 14px;
+  line-height: 24px;
+  margin-bottom: 0;
+  font-family: "Raleway", sans-serif;
+  color: #5c5c5c;
+}
+
+#footer .footer-top h4 {
+  font-size: 16px;
+  font-weight: bold;
+  color: #212529;
+  position: relative;
+  padding-bottom: 12px;
+}
+
+#footer .footer-top .footer-links {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#footer .footer-top .footer-links ul i {
+  padding-right: 2px;
+  color: #f39e7a;
+  font-size: 18px;
+  line-height: 1;
+}
+
+#footer .footer-top .footer-links ul li {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+#footer .footer-top .footer-links ul li:first-child {
+  padding-top: 0;
+}
+
+#footer .footer-top .footer-links ul a {
+  color: #5c5c5c;
+  transition: 0.3s;
+  display: inline-block;
+  line-height: 1;
+}
+
+#footer .footer-top .footer-links ul a:hover {
+  text-decoration: none;
+  color: #eb5d1e;
+}
+
+#footer .footer-top .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #eb5d1e;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+
+#footer .footer-top .social-links a:hover {
+  background: #ef7f4d;
+  color: #fff;
+  text-decoration: none;
+}
+
+#footer .copyright {
+  text-align: center;
+  float: left;
+}
+
+#footer .credits {
+  float: right;
+  text-align: center;
+  font-size: 13px;
+  color: #212529;
+}
+
+#footer .credits a {
+  color: #eb5d1e;
+}
+
+@media (max-width: 575px) {
+
+  #footer .copyright,
+  #footer .credits {
+    float: none;
+    -moz-text-align-last: center;
+    text-align-last: center;
+    padding: 3px 0;
+  }
+}
+/*****************************************/
 
 
 
@@ -292,6 +395,7 @@ footer span {
     height: 800px;
     display: flex;
     position: relative;
+    background-color: #eee;
 }
 
 
@@ -303,12 +407,21 @@ footer span {
     height: 35%;
 }
 .ranBoard_1{
-    border: 1px solid green;
+   /*  border: 1px solid green; */
+   overflow: hidden;
+   border-radius: 20px;
 }
 .ranBoard_1 > a > img {
     width: 100%;
     height: 100%;
+    border-radius: 20px;
+    transition: all 0.5s ease-in-out;
 }
+.ranBoard_1 > a:hover img {
+  transform: scale(1.2);
+}
+
+
 
 
 
@@ -351,6 +464,8 @@ footer span {
     top: 5px;
     padding: 5px 10px;
     width: 33%;
+    padding: 30px;
+    border-radius: 20px;
 }
 
 .slide3{ 
@@ -366,7 +481,7 @@ footer span {
     transform: translateY(-50%);
     width: 50px;
     height: 50px;
-    background: rgb(118, 153, 90);
+    background: black;
     opacity: 0.8;
     text-align: center;
     line-height: 50px;
@@ -380,11 +495,11 @@ footer span {
 }
 .slider__btn a.prev {
     font-size: 20px;
-    left: 190px;
+    left: 90px;
 }
 .slider__btn a.next {
     font-size: 20px;
-    right: 200px;
+    right: 100px;
 }
 
 
