--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -181,6 +181,14 @@ body {
     width: 1600px;
 }
 
+.div4_1 > span {
+    margin-left: 30px;
+}
+.div5 > span {
+    margin-left: 30px;
+}
+
+
 
 /*00캠핑장 상세페이지 상단 공통*/
 .camp_info_box {
@@ -257,11 +265,11 @@ body {
     width: 280px;
     margin-top: 80px;
     height: 65px;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     border-radius: 10px;
     background-color: rgb(54 52 49);
     transition: background-color 0.2s ease;
-    font-size: 30px;
+    font-size: 25px;
     letter-spacing: 2.0mm;
 }
 #reservationBtn:hover{
@@ -287,6 +295,7 @@ body {
     text-align: left;
     padding: 20px;
     color: #616161;
+    margin-left: 30px
 }
 
 .table_w .table {
