--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -215,7 +215,11 @@ main {
   align-items: flex-end;
   justify-content: center;
 }
-
+#lastDiv{
+  width: 100%;
+  height: 100px;
+  background-color: #eee;
+}
 
 
 /* -------------- ajax Table  --------------      */
@@ -260,16 +264,18 @@ main {
 --------------------------------------------------------------*/
 #footer {
   background: #fff;
-  padding: 0 0 30px 0;
+  padding: 0 0 20px 0;
   color: #212529;
-  font-size: 14px;
+  font-size: 18px;
   background: #fef8f5;
 }
 
 
 #footer .footer-top {
-  padding: 60px 0 30px 0;
+ /*  padding: 60px 0 30px 0; */
   background: #fff;
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 #footer .footer-top .footer-contact {
@@ -301,7 +307,7 @@ main {
 }
 
 #footer .footer-top .footer-links {
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 #footer .footer-top .footer-links ul {
@@ -368,7 +374,7 @@ main {
 #footer .credits {
   float: right;
   text-align: center;
-  font-size: 13px;
+  font-size: 18px;
   color: #212529;
 }
 
@@ -386,6 +392,10 @@ main {
     padding: 3px 0;
   }
 }
+.credits > a > i {
+  font-size: 25px;
+}
+
 /*****************************************/
 
 
@@ -563,3 +573,6 @@ main {
     justify-content: center !important;
     align-items: center !important;
   }
+.row{
+  width: 700px !important;
+}
