--- a/camp/src/main/webapp/resources/css/calendarStyle.css
+++ b/camp/src/main/webapp/resources/css/calendarStyle.css
@@ -504,14 +504,20 @@ body{
     
 }
 .total{
-    margin-left: 30px;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
 }
 
 .total-days{
-    width: 100px;
+    width: 80px;
+    height: 30px;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     font-weight: 100;
+    margin-top: 7px;
+    margin-left: 5px;
     
 }
 .first-day{
