배경이미지 green 변경후 , 은주 병합전

--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -258,7 +258,9 @@ body {
     border-bottom: 1px solid #c8c8c8;
     line-height: 25px;
 }
-
+#homePage > a {
+    color: #eb5d1e;
+}
 
 #reservationBtn {
     border: 1px solid #c8c8c8;
