--- a/camp/src/main/webapp/resources/css/campList.css
+++ b/camp/src/main/webapp/resources/css/campList.css
@@ -61,7 +61,7 @@ hr {
     align-items: center;
     height: 600px;
     border: 1px solid black;
-    background-image: url('../images/main4.gif'); 
+    background-image: url('../images/3333.gif'); 
     background-size: 100% 100%; 
 }
 
@@ -156,7 +156,7 @@ hr {
 /*   display: inline-block; */
   margin-right: 50px;
   padding: 8px 16px;
-  background-color: orange;
+  background-color: #22c730;
   color: #fff;
   font-weight: bold;
   text-decoration: none;
@@ -167,7 +167,7 @@ hr {
 }
 
 .reservation_button:hover {
-  background-color: rgb(249, 190, 81);
+  background-color: #73ed7db6;
 }
 
 
