--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -93,11 +93,21 @@ display: flex;
 #header .logo h1 {
 display: flex;
 align-items: center;
-font-size: 30px;
+font-size: 33px;
+margin: 0;
+font-weight: 400;
+letter-spacing: 2px;
+color: #02ff00;
+}
+#header .logo h4 {
+display: flex;
+align-items: center;
+font-size: 20px;
 margin: 0;
 font-weight: 400;
 letter-spacing: 2px;
 color: #ffffff;
+margin-bottom: -9px;
 }
 
 #header .logo img {
@@ -148,7 +158,7 @@ margin-left: 5px;
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-color: #eb5d1e;
+color: #22c730;
 }
 
 .navbar .getstarted,
@@ -163,7 +173,7 @@ border-radius: 50px;
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
 color: #fff;
-background: #ee7843;
+background:#22c730;
 }
 
 .navbar .dropdown ul {
@@ -200,7 +210,7 @@ font-size: 12px;
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-color: #eb5d1e;
+color: #22c730;
 }
 
 .navbar .dropdown:hover>ul {
@@ -210,12 +220,12 @@ visibility: visible;
 }
 
 a {
-color: #eb5d1e;
+color: #22c730;
 text-decoration: none;
 }
 
 a:hover {
-  color: #ef7f4d;
+  color: #22c730;
   text-decoration: none;
 }
 
@@ -873,9 +883,10 @@ cursor: pointer;
   text-decoration: none;
 }
 
-#footer .copyright {
+#footer .copyright > a {
   text-align: center;
-  float: left;
+ /*  float: left; */
+ color: #eb5d1e;
 }
 
 #footer .credits {
