--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -44,11 +44,21 @@ transition: background-color 5000s;
 #header .logo h1 {
   display: flex;
   align-items: center;
-  font-size: 30px;
+  font-size: 33px;
+  margin: 0;
+  font-weight: 400;
+  letter-spacing: 2px;
+  color: #02ff00;
+}
+#header .logo h4 {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
   margin: 0;
   font-weight: 400;
   letter-spacing: 2px;
   color: #ffffff;
+  margin-bottom: -9px;
 }
 
 #header .logo img {
@@ -99,7 +109,7 @@ transition: background-color 5000s;
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #eb5d1e;
+  color: #22c730;
 }
 
 .navbar .getstarted,
@@ -114,7 +124,7 @@ transition: background-color 5000s;
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
   color: #fff;
-  background: #ee7843;
+  background:#22c730;
 }
 
 .navbar .dropdown ul {
@@ -151,7 +161,7 @@ transition: background-color 5000s;
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #eb5d1e;
+  color: #22c730;
 }
 
 .navbar .dropdown:hover>ul {
@@ -161,12 +171,12 @@ transition: background-color 5000s;
 }
 
 a {
-  color: #eb5d1e;
+  color: #22c730;
   text-decoration: none;
 }
 
 a:hover {
-    color: #ef7f4d;
+    color: #22c730;
     text-decoration: none;
 }
 
@@ -191,7 +201,7 @@ main {
 }
 
 .content2{
-    background-image: url('../images/main4.gif');
+    background-image: url('../images/testImage1.png');
     background-size: 100% 100%;
     width: 100%;
     height: 1000px;
@@ -204,7 +214,7 @@ main {
   height: 998px;
   /* background-color: rgba(255,255,255, 0.1); */
   /* box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3); */
-  backdrop-filter: blur(10px);
+ /*  backdrop-filter: blur(10px); */
 }
 
 
@@ -241,7 +251,7 @@ main {
 }
 
 .cont_tb1 tbody tr:nth-child(1) td {
-    border-top: 2px solid orange;
+    border-top: 2px solid #22c730;
 }
 
 .cont_tb1 table tr th {
@@ -366,9 +376,10 @@ main {
   text-decoration: none;
 }
 
-#footer .copyright {
+#footer .copyright > a {
   text-align: center;
-  float: left;
+  /* float: left; */
+  color: #eb5d1e;
 }
 
 #footer .credits {
@@ -378,8 +389,8 @@ main {
   color: #212529;
 }
 
-#footer .credits a {
-  color: #eb5d1e;
+#footer > a {
+  color : #eb5d1e !important;
 }
 
 @media (max-width: 575px) {
@@ -394,6 +405,7 @@ main {
 }
 .credits > a > i {
   font-size: 25px;
+  color:  #eb5d1e;
 }
 
 /*****************************************/
@@ -501,7 +513,7 @@ main {
     border-radius: 50%;
 }
 .slider__btn a:hover {
-    background: #eb5d1e;
+    background: #22c730;
 }
 .slider__btn a.prev {
     font-size: 20px;
@@ -558,7 +570,7 @@ main {
   }
   
   .back-to-top:hover {
-    background: #ee7843;
+    background: #22c730;
     color: #fff;
   }
   
