--- a/camp/src/main/webapp/resources/css/boardList-style1.css
+++ b/camp/src/main/webapp/resources/css/boardList-style1.css
@@ -40,6 +40,7 @@ span{
     /* width: 1000px; */
     background-color: rgb(237, 235, 235);
     /* border : 1px solid black; */
+    margin-top: 150px;
 }
 .board2{
     margin-left: 35px;
